# ailater-im

./: .gitignore  Cargo.toml  LICENSE  Makefile  PROJECT.md  README.md  build.rs  build.sh  fcitx5.sym  install-rust.sh
conf/: ailater-im.conf
conf/inputmethod/: ailater-im.conf
config-tool/: Cargo.toml  ailater-config.desktop
config-tool/src/: main.rs
data/: config.toml  phrases.dict  system.dict
include/: fcitx5.h
src/: config.rs  dictionary.rs  engine.rs  ffi.rs  ffi_exports.rs  ffi_fcitx5.rs  ffi_wrapper.cpp  lib.rs  model.rs  pinyin.rs
