[package]
name = "ailater-im"
version = "0.1.0"
edition = "2021"
authors = ["AI Input Method Developer"]
description = "An AI-powered input method for fcitx5 using Rust"
license = "MIT"

[lib]
name = "ailater_im"
crate-type = ["cdylib", "rlib"]

[dependencies]
# FFI and bindings
libc = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time"] }

# HTTP client for model API
reqwest = { version = "0.11", features = ["json"] }

# Tokenization (for local model support)
tokenizers = { version = "0.15", optional = true }

# Local inference (optional)
candle-core = { version = "0.4", optional = true }
candle-nn = { version = "0.4", optional = true }
candle-transformers = { version = "0.4", optional = true }

# Pinyin processing
pinyin = "0.10"

# Thread-safe data structures
parking_lot = "0.12"
dashmap = "5.5"

# Configuration
directories = "5.0"

[features]
default = ["remote-model"]
remote-model = []
local-model = ["tokenizers", "candle-core", "candle-nn", "candle-transformers"]
full = ["remote-model", "local-model"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3