[package]
name = "ailater-config"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Configuration tool for ailater-im input method"

[[bin]]
name = "ailater-config"
path = "src/main.rs"

[dependencies]
# Use the main library's configuration types
ailater-im = { path = "..", default-features = false }

# GUI framework
eframe = "0.27"
egui = "0.27"

# Shared workspace dependencies
serde = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }

# File dialogs and open utilities
rfd = "0.14"
open = "5.0"
